--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
    <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
 </head>
 <body>
-   <!-- 여기에 내용을 추가할 수 있습니다 -->
+  TESTTEST
 </body>
 </html>
