--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>Web3modal vanilla JavaScript demo</h1>
-
-          <p>No wallet connected. Connect wallet to show accounts and their ETH balances.</p>
+          <h1>Telegram Web App</h1>
 
           <div id="prepare">
             <button class="btn btn-primary" id="btn-connect">
